fix compiler warnings
https://github.com/qos-ch/logback/commit/8be3e3e6e